k8s/client-sa.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: client-ns
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: service1
  namespace: client-ns
spec:
  replicas: 1
  selector:
    matchLabels: { app: service1 }
  template:
    metadata:
      labels: { app: service1 }
    spec:
      serviceAccountName: client-sa
      containers:
      - name: service1
        image: client_mesh:v7
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: service1
  namespace: client-ns
spec:
  selector: { app: service1 }
  ports:
  - port: 8000
    targetPort: 5000
