k8s/mesh.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: service1
  namespace: mesh-demo
spec:
  replicas: 1
  selector:
    matchLabels: { app: service1 }
  template:
    metadata:
      labels: { app: service1 }
    spec:
      serviceAccountName: client-sa
      containers:
      - name: service1
        image: client_mesh:v6
        ports: [{ containerPort: 5000 }]
---
apiVersion: v1
kind: Service
metadata:
  name: service1
  namespace: mesh-demo
spec:
  selector: { app: service1 }
  ports:
  - port: 8000
    targetPort: 5000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: service2
  namespace: mesh-demo
spec:
  replicas: 1
  selector:
    matchLabels: { app: service2 }
  template:
    metadata:
      labels: { app: service2 }
    spec:
      containers:
      - name: service2
        image: resource_mesh:v7
        ports: [{ containerPort: 5001 }]
---
apiVersion: v1
kind: Service
metadata:
  name: service2
  namespace: mesh-demo
spec:
  selector: { app: service2 }
  ports:
  - port: 5001
    targetPort: 5001
