k8s/resource.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: mesh-demo
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: service2
  namespace: mesh-demo
spec:
  replicas: 1
  selector:
    matchLabels: { app: service2 }
  template:
    metadata:
      labels: { app: service2 }
    spec:
      containers:
      - name: service2
        image: resource_mesh:v7
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 5001
---
apiVersion: v1
kind: Service
metadata:
  name: service2
  namespace: mesh-demo
spec:
  selector: { app: service2 }
  ports:
  - port: 5001
    targetPort: 5001
